--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,17 @@
 Changelog
 =========
 
+0.2 (2011-02-14)
+----------------
+
+* Updated to use `IDescriptiveContent` from ``dolmen.app.content``
+  instead of `IBaseContent` from ``dolmen.content`` that non longer
+  exists : a document now has a `description` attribute in addition to
+  `title`. This change has been echoed in the indexer.
+
+* Updated dependencies.
+
+
 0.1 (2010-07-20)
 ----------------
 
